[package]
name = "pqc-vault-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core hybrid post-quantum cryptography for pqc-vault (libcrux + RustCrypto)."

[dependencies]
libcrux-ml-kem = "0.0.9"
libcrux-ml-dsa = "0.0.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
aes-gcm = "0.10.3"
hkdf = "0.13.0"
sha2 = "0.11.0"
getrandom = "0.3"
zeroize = "1"

[dev-dependencies]
hex = "0.4"
serde_json = "1"
sha2 = "0.11.0"
libcrux-ml-kem = "0.0.9"
libcrux-ml-dsa = "0.0.9"
