[package]
name = "pqc-vault-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Node.js (napi-rs) binding for pqc-vault."

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
pqc-vault-core = { path = "../pqc-vault-core" }

[build-dependencies]
napi-build = "2"
